feat: Make new controller/handler/service model work with content-publishing-service endpoints - Add CONTENT_PUBLISHER_URL env variable - Add content-watcher to docker-compose (was missing)
