# backend/openapi.json
@@ -667,7 +667,9 @@
             "minItems": 1
           }
         },
-        "required": ["files"]
+        "required": [
+          "files"
+        ]
       },
       "UploadAssetResponse": {
         "description": "Schema defining the response for a successful asset upload operation. Contains identifiers for all uploaded assets.",
@@ -681,7 +683,9 @@
             }
           }
         },
-        "required": ["assetIds"]
+        "required": [
+          "assetIds"
+        ]
       },
       "ProviderResponse": {
         "type": "object",
@@ -707,10 +711,20 @@
           },
           "network": {
             "type": "string",
-            "enum": ["local", "testnet", "mainnet"]
+            "enum": [
+              "local",
+              "testnet",
+              "mainnet"
+            ]
           }
         },
-        "required": ["nodeUrl", "siwfUrl", "providerId", "schemas", "network"]
+        "required": [
+          "nodeUrl",
+          "siwfUrl",
+          "providerId",
+          "schemas",
+          "network"
+        ]
       },
       "ChallengeResponse": {
         "type": "object",
@@ -719,18 +733,24 @@
             "type": "string"
           }
         },
-        "required": ["challenge"]
+        "required": [
+          "challenge"
+        ]
       },
       "LoginRequest": {
         "type": "object",
         "properties": {
           "algo": {
             "type": "string",
-            "enum": ["SR25519"]
+            "enum": [
+              "SR25519"
+            ]
           },
           "encoding": {
             "type": "string",
-            "enum": ["hex"]
+            "enum": [
+              "hex"
+            ]
           },
           "encodedValue": {
             "type": "string"
@@ -766,7 +786,10 @@
             "type": "string"
           }
         },
-        "required": ["expires", "accessToken"]
+        "required": [
+          "expires",
+          "accessToken"
+        ]
       },
       "WalletLoginRequest": {
         "type": "object",
@@ -779,7 +802,10 @@
             "properties": {
               "siwsPayload": {
                 "type": "object",
-                "required": ["message", "signature"],
+                "required": [
+                  "message",
+                  "signature"
+                ],
                 "properties": {
                   "message": {
                     "type": "string"
@@ -791,7 +817,9 @@
               },
               "error": {
                 "type": "object",
-                "required": ["message"],
+                "required": [
+                  "message"
+                ],
                 "properties": {
                   "message": {
                     "type": "string"
@@ -807,7 +835,11 @@
                 "type": "array",
                 "items": {
                   "type": "object",
-                  "required": ["pallet", "extrinsicName", "encodedExtrinsic"],
+                  "required": [
+                    "pallet",
+                    "extrinsicName",
+                    "encodedExtrinsic"
+                  ],
                   "properties": {
                     "pallet": {
                       "type": "string"
@@ -823,7 +855,9 @@
               },
               "error": {
                 "type": "object",
-                "required": ["message"],
+                "required": [
+                  "message"
+                ],
                 "properties": {
                   "message": {
                     "type": "string"
@@ -847,7 +881,11 @@
             "type": "string"
           }
         },
-        "required": ["expires", "accessToken", "dsnpId"]
+        "required": [
+          "expires",
+          "accessToken",
+          "dsnpId"
+        ]
       },
       "CreateIdentityRequest": {
         "type": "object",
@@ -857,14 +895,18 @@
           },
           "algo": {
             "type": "string",
-            "enum": ["SR25519"]
+            "enum": [
+              "SR25519"
+            ]
           },
           "baseHandle": {
             "type": "string"
           },
           "encoding": {
             "type": "string",
-            "enum": ["hex"]
+            "enum": [
+              "hex"
+            ]
           },
           "expiration": {
             "type": "number"
@@ -896,7 +938,10 @@
             "type": "integer"
           }
         },
-        "required": ["expires", "accessToken"]
+        "required": [
+          "expires",
+          "accessToken"
+        ]
       },
       "AuthAccountResponse": {
         "type": "object",
@@ -908,18 +953,24 @@
             "type": "string"
           }
         },
-        "required": ["dsnpId"]
+        "required": [
+          "dsnpId"
+        ]
       },
       "DelegateRequest": {
         "type": "object",
         "properties": {
           "algo": {
             "type": "string",
-            "enum": ["SR25519"]
+            "enum": [
+              "SR25519"
+            ]
           },
           "encoding": {
             "type": "string",
-            "enum": ["hex"]
+            "enum": [
+              "hex"
+            ]
           },
           "encodedValue": {
             "type": "string"
@@ -928,7 +979,12 @@
             "type": "string"
           }
         },
-        "required": ["algo", "encodedValue", "encoding", "publicKey"]
+        "required": [
+          "algo",
+          "encodedValue",
+          "encoding",
+          "publicKey"
+        ]
       },
       "DelegateResponse": {
         "type": "object",
@@ -940,7 +996,10 @@
             "type": "integer"
           }
         },
-        "required": ["expires", "accessToken"]
+        "required": [
+          "expires",
+          "accessToken"
+        ]
       },
       "HandlesResponse": {
         "type": "object",
@@ -952,7 +1011,10 @@
             "type": "string"
           }
         },
-        "required": ["publicKey", "handle"]
+        "required": [
+          "publicKey",
+          "handle"
+        ]
       },
       "PaginatedBroadcast": {
         "type": "object",
@@ -970,7 +1032,11 @@
             }
           }
         },
-        "required": ["newestBlockNumber", "oldestBlockNumber", "posts"]
+        "required": [
+          "newestBlockNumber",
+          "oldestBlockNumber",
+          "posts"
+        ]
       },
       "Broadcast": {
         "type": "object",
@@ -994,7 +1060,12 @@
             "description": "Array of ReplyExtended objects"
           }
         },
-        "required": ["fromId", "contentHash", "content", "timestamp"]
+        "required": [
+          "fromId",
+          "contentHash",
+          "content",
+          "timestamp"
+        ]
       },
       "PostBroadcastResponse": {
         "type": "object",
@@ -1008,7 +1079,10 @@
             "description": "Timestamp of the post"
           }
         },
-        "required": ["content", "published"]
+        "required": [
+          "content",
+          "published"
+        ]
       },
       "BroadcastExtended": {
         "type": "object",
@@ -1035,7 +1109,12 @@
             "description": "Array of ReplyExtended objects"
           }
         },
-        "required": ["fromId", "contentHash", "content", "timestamp"]
+        "required": [
+          "fromId",
+          "contentHash",
+          "content",
+          "timestamp"
+        ]
       },
       "ReplyExtended": {
         "type": "object",
@@ -1062,7 +1141,12 @@
             "description": "Array of ReplyExtended objects"
           }
         },
-        "required": ["fromId", "contentHash", "content", "timestamp"]
+        "required": [
+          "fromId",
+          "contentHash",
+          "content",
+          "timestamp"
+        ]
       },
       "PostBroadcastRequest": {
         "type": "object",
@@ -1080,7 +1164,9 @@
             }
           }
         },
-        "required": ["content"]
+        "required": [
+          "content"
+        ]
       },
       "CreatePostRequest": {
         "type": "object",
@@ -1099,7 +1185,9 @@
             }
           }
         },
-        "required": ["content"]
+        "required": [
+          "content"
+        ]
       },
       "EditPostRequest": {
         "type": "object",
@@ -1114,7 +1202,11 @@
             "type": "string"
           }
         },
-        "required": ["content", "targetAnnouncementType", "targetContentHash"]
+        "required": [
+          "content",
+          "targetAnnouncementType",
+          "targetContentHash"
+        ]
       },
       "Profile": {
         "type": "object",
@@ -1137,7 +1229,12 @@
             "type": "string"
           }
         },
-        "required": ["fromId", "contentHash", "content", "timestamp"]
+        "required": [
+          "fromId",
+          "contentHash",
+          "content",
+          "timestamp"
+        ]
       },
       "EditProfileRequest": {
         "type": "object",
@@ -1146,7 +1243,9 @@
             "type": "string"
           }
         },
-        "required": ["content"]
+        "required": [
+          "content"
+        ]
       }
     }
   }
